# vicon-py-sdk

./: .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml
examples/: canvas_tracker.py  object_tracker.py  print_markers.py  print_subjects.py  quickstart.py  record_csv.py  track_unlabeled.py
scripts/: install_sdk.sh
vicon_sdk/: __init__.py  client.py  sdk.py  types.py
